# sof

src/arch/xtensa/configs/: tigerlake_defconfig
src/arch/xtensa/lib/: cpu.c
src/audio/: CMakeLists.txt  Kconfig  buffer.c  dai.c  detect_test.c  eq_fir.c  eq_iir.c  host.c  keydetect_dummy.c  kpb.c  pipeline.c  volume.c
src/audio/mux/: mux.c
src/audio/smart_amp/: smart_amp.c
src/drivers/dw/: dma.c
src/drivers/intel/: dmic.c
src/drivers/intel/baytrail/: ssp.c
src/drivers/intel/cavs/: CMakeLists.txt  alh.c  dmic.c  hda.c  interrupt.c  multidai.c  multidma.c  ssp.c  timer.c
src/drivers/intel/haswell/: ssp.c
src/host/: trace.c
src/include/ipc/: dai-intel.h  dai.h
src/include/kernel/: mailbox.h
src/include/sof/: dai.h  trace.h
src/include/sof/audio/: channel_map.h  component.h  pipeline.h
src/include/sof/drivers/: multidai.h  multidma.h
src/include/user/: trace.h
src/ipc/: handler.c
src/lib/: alloc.c  dai.c
src/platform/apollolake/: Makefile.am  platform.c
src/platform/cannonlake/: Makefile.am  platform.c
src/platform/intel/: memory_common.c  platform_common.c  pm_runtime_common.c
src/schedule/: ll_schedule.c  timer_domain.c
src/tasks/: audio.c
test/cmocka/: Makefile.am
test/cmocka/src/: CMakeLists.txt
test/cmocka/src/audio/mixer/: comp_mock.c  mixer_new.c  mixer_test.c  mock.c
test/cmocka/src/drivers/: CMakeLists.txt
test/cmocka/src/drivers/multidma/: CMakeLists.txt  mock_dma.c  mock_dma.h  multidma_test.c  stub.c
tools/logger/: convert.c
tools/topology/: CMakeLists.txt  sof-icl-rt700.m4
tools/topology/m4/: dai.m4
(+27 files in other folders)
